--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Latihan Coding - Radithya Rafa</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="image/Yae miko💭🌷.jpg" type="image/x-icon">
 </head>
 <body class="light-mode">
     <div class="theme-toggle">
